--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --spacing: 1px;
+  --font-inter: Inter;
+  --main-red: #99331A;
+  --dark-orange: #842C16;
+  --light-orange: #FFFBF9;
+  --black: #0D0D0D;
+  --white: #FFF;
+  --light-grey: #F5F5F5;
+  --dark-grey: #565656;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--white);
+  color: var(--black);
+  font-family: var(--font-inter);
+  font-weight: 500;
 }
