--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import "tailwindcss";
 @source "@/app/property/[slug]/*";
+@source "@/app/components/*";
 
 :root {
   --spacing: 1px;
