--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 @source "@/app/property/[slug]/*";
 @source "@/app/components/*";
+@source "@/app/stories/*";
 
 :root {
   --spacing: 1px;
@@ -13,6 +14,7 @@
   --white: #FFF;
   --light-grey: #F5F5F5;
   --dark-grey: #565656;
+  --error: red;
 }
 
 body {
@@ -22,36 +24,11 @@ body {
   font-weight: 500;
 }
 
-.checkbox-container {
-  display: flex;
-  cursor: pointer;
-  font-size: 14px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  align-items: center;
-}
-
-.checkbox-container input {
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-.checkmark {
-  height: 12px;
-  width: 12px;
-  border: 1px solid var(--dark-grey);
-  margin-right: 10px;
-}
-
-.checkbox-container:hover input~.checkmark,
+.checkbox-container:hover input:not(:disabled)~.checkmark,
 .checkbox-container input:checked~.checkmark {
   background-color: var(--black);
 }
 
-.input>div {
+.send-message .input>div {
   border: none !important;
 }
